--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
 /*-----Fonts*/
-
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Russo+One&display=swap');
 
 /*-----Background Colors / Images*/
 
+.error_main {
+    background: url(../images/404image.jpg) no-repeat center;
+    background-size: cover;
+    height: 300px;
+}
 
 /*-----Index Header*/
 
@@ -23,7 +28,18 @@
 
 
 /*-----404 Header*/
+.error_header {
+    min-height: 100px;
+    padding-left: 50px;
+    padding-top: 50px;
+}
 
+.error_header h1 {
+    font-family: "Russo One", sans-serif;
+    font-style: italic bold;
+    font-size: 5rem;
+    color: darkred;
+}
 
 /*-----404 Main Content*/
 
